updated decap toolbar

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -8,5 +8,8 @@
 <body>
   <!-- Include the script that builds the page and powers DecapCMS -->
   <script src="https://unpkg.com/decap-cms@^3.3.3/dist/decap-cms.js"></script>
+  
+  <!-- Custom widgets -->
+  <script src="/admin/youtube-widget.js"></script>
 </body>
 </html>
