--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -11,5 +11,8 @@
   
   <!-- Custom widgets -->
   <script src="/admin/youtube-widget.js"></script>
+  
+  <!-- Custom editor components -->
+  <script src="/admin/editor-components.js"></script>
 </body>
 </html>
