--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Content Manager</title>
+  <link href="/admin/preview-styles.css" rel="stylesheet" />
 </head>
 <body>
   <!-- Include the script that builds the page and powers DecapCMS -->
